--- a/Resources/Styles/Animations.xaml
+++ b/Resources/Styles/Animations.xaml
@@ -17,7 +17,7 @@
     </Storyboard>
 
 
-    <Storyboard x:Key="ShowAccountBorderAnimation">
+    <Storyboard x:Key="ShowBorderAnimation">
         <DoubleAnimation Storyboard.TargetProperty="Opacity"
                          From="0" To="1" Duration="0:0:0.3"/>
         <ThicknessAnimation Storyboard.TargetProperty="Margin"
@@ -25,7 +25,7 @@
                     Duration="0:0:0.3" DecelerationRatio="0.6"/>
     </Storyboard>
 
-    <Storyboard x:Key="HideAccountBorderAnimation">
+    <Storyboard x:Key="HideBorderAnimation">
         <DoubleAnimation Storyboard.TargetProperty="Opacity"
                      From="1" To="0" Duration="0:0:0.25"/>
         <ThicknessAnimation Storyboard.TargetProperty="Margin"
