--- a/Views/SupplierOrdersModule/SupplierOrdersPage.xaml
+++ b/Views/SupplierOrdersModule/SupplierOrdersPage.xaml
@@ -1,11 +1,11 @@
-﻿<Page x:Class="ItaliaPizzaClient.Views.OrderSuppliersPage"
+﻿<Page x:Class="ItaliaPizzaClient.Views.SupplierOrdersPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:ItaliaPizzaClient.Views"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="520" d:DesignWidth="800"
       Title="OrderSuppliersPage">
 
     <Grid Background="{StaticResource BackgroundBrush}">
