--- a/Properties/Strings.es-MX.xaml
+++ b/Properties/Strings.es-MX.xaml
@@ -320,6 +320,13 @@
     <sys:String x:Key="CashRegister_TbInitialBalance">Balance inicial:</sys:String>
     <sys:String x:Key="CashRegister_CheckBConfirmOpening">Confirmar apertura de caja.</sys:String>
     <sys:String x:Key="CashRegister_BtnOpening">Abrir caja</sys:String>
+    <sys:String x:Key="CashRegister_DialogTInvalidAmount">Monto inválido</sys:String>
+    <sys:String x:Key="CashRegister_DialogDInvalidAmount">Por favor, ingrese un monto válido y mayor o igual a 0 para abrir la caja.</sys:String>
+    <sys:String x:Key="CashRegister_DialogTSuccess">Caja abierta</sys:String>
+    <sys:String x:Key="CashRegister_DialogDSuccess">La caja ha sido abierta correctamente.</sys:String>
+    <sys:String x:Key="CashRegister_DialogTFail">Caja ya abierta</sys:String>
+    <sys:String x:Key="CashRegister_DialogDAlreadyOpen">Ya existe una caja abierta. No se puede abrir otra hasta realizar el corte.</sys:String>
+
     <!--Order-->
     <sys:String x:Key="OrderPage_BtnAddOrder">Añadir Orden</sys:String>
     <sys:String x:Key="OrderPage_BtnPayOrder">Pagar Orden</sys:String>
