--- a/Views/UserControls/OpeningCash.xaml
+++ b/Views/UserControls/OpeningCash.xaml
@@ -30,18 +30,18 @@
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
 
-                    <TextBox Grid.Column="0"
+                    <TextBox x:Name="TxbDateOpening" Grid.Column="0"
                              Style="{DynamicResource TextBoxStyle}" 
                              Tag="{DynamicResource CashRegister_TbOpeningDate}"
                              IsEnabled="False" Margin="0 0 10 0" />
 
-                    <TextBox Grid.Column="1"
+                    <TextBox x:Name="TbInitialBalance" Grid.Column="1"
                              Style="{DynamicResource TextBoxStyle}" 
                              Tag="{DynamicResource CashRegister_TbInitialBalance}"
                              Margin="10 0 0 0" />
                 </Grid>
 
-                <CheckBox x:Name="SupplyBrandCheckBox"
+                <CheckBox x:Name="ConfirmOpenCashCheckBox"
                           Style="{DynamicResource CheckBoxStyle}"
                           Content="{DynamicResource CashRegister_CheckBConfirmOpening}"
                           Margin="5 4 0 0"
