--- a/Views/RecipesModule/RecipesPage.xaml
+++ b/Views/RecipesModule/RecipesPage.xaml
@@ -60,7 +60,7 @@
                 <Grid Grid.Row="1">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="260"/>
+                        <ColumnDefinition Width="300"/>
                     </Grid.ColumnDefinitions>
 
                     <Grid Grid.Column="0">
@@ -93,7 +93,7 @@
                     </Grid>
 
                     <Border Grid.Column="1" BorderBrush="{StaticResource SecondaryBrush}" BorderThickness="0.5, 0, 0, 0">
-                        <Grid>
+                        <Grid Grid.Row="0" x:Name="RecipeDetailsPanel">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="4*"/>
                                 <RowDefinition Height="6*"/>
@@ -101,15 +101,22 @@
                             </Grid.RowDefinitions>
 
                             <!-- TODO add Image on row 0-->
-
+                            <StackPanel Grid.Row="0" Orientation="Vertical">
+                                <Image Name="RecipePic" HorizontalAlignment="Left" Width="100"
+                                    Height="100" Stretch="Fill" VerticalAlignment="Top"
+                                    RenderOptions.BitmapScalingMode="LowQuality" Margin="0, 16">
+                                    <Image.Clip>
+                                        <RectangleGeometry Rect="0, 0, 0, 0" RadiusX="12" RadiusY="12"/>
+                                    </Image.Clip>
+                                </Image>
+                            </StackPanel>
                             <StackPanel Grid.Row="1" Orientation="Vertical" Margin="24, 0">
-                                <TextBlock Text="Pizza de pepperoni"
+                                <TextBlock x:Name="RecipeTitle" Text="Pizza de pepperoni"
                                     Style="{DynamicResource SubtitleLabelStyle}"/>
-                                <TextBlock Text="Ingredientes: " Margin="0, 2, 0, 0"
+                                <TextBlock x:Name="RecipeIngredients" Text="Ingredientes: " Margin="0, 2, 0, 0"
                                     Style="{DynamicResource RegularLabelStyle}"
-               
                                     Foreground="{StaticResource PrimaryButtonBrush}"/>
-                                <TextBlock Text="Ejemplo de descripcion e ingredientes..." 
+                                <TextBlock x:Name="RecipeDescription" Text="Ejemplo de descripcion e ingredientes..." 
                                     Margin="0, 10"
                                     TextWrapping="Wrap"
                                     Style="{DynamicResource DescriptionLabelStyle}"/>
